--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -2,55 +2,49 @@
 @import 'libs/functions';
 @import 'libs/mixins';
 @import 'libs/skel';
-
 /* Basic */
-
-	code,
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select,
-	textarea,
-	.box,
-	.image,
-	.image img,
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	.button {
-		position: relative;
-		-ms-behavior: url('assets/js/ie/PIE.htc');
-	}
-
+.box,
+.button,
+.image,
+.image img,
+code,
+input[type="button"],
+input[type="email"],
+input[type="password"],
+input[type="reset"],
+input[type="submit"],
+input[type="text"],
+select,
+textarea {
+	position: relative;
+	-ms-behavior: url('assets/js/ie/PIE.htc');
+}
 /* Form */
+input[type="email"],
+input[type="password"],
+input[type="text"],
+select {
+	line-height: _size(element-height);
+}
 
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select {
-		line-height: _size(element-height);
-	}
+input[type="checkbox"],
+input[type="radio"] {
+	@include vendor( 'appearance', 'normal');
 
-	input[type="checkbox"],
-	input[type="radio"] {
-		@include vendor('appearance', 'normal');
+	& + label {
+		padding: 0 0 0 1.5em;
 
-		& + label {
-			padding: 0 0 0 1.5em;
-
-			&:before {
-				display: none;
-			}
+		&:before {
+			display: none;
 		}
 	}
-
+}
 /* Button */
-
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	.button {
-		&.alt {
-			border: solid _size(border-width) _palette(border2);
-		}
+.button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+	&.alt {
+		border: solid _size(border-width) _palette(border2);
 	}
+}
