Small update, changelog here: http://www.nickolasgupton.me/website/2017/02/24/update.html

--- a/_includes/layout/sidebar.html
+++ b/_includes/layout/sidebar.html
@@ -18,45 +18,12 @@
 				<h2>Get in touch</h2>
 			</header>
 			<div class="container">
-				<h3>
-      Contact Me
-			</h3>
-				<form action="http://formspree.io/contact@nickolasgupton.me" method="post">
-					<div class="row uniform">
-						<div class="12u">
-							<input type="text" name="name" id="name" placeholder="Name" />
-						</div>
-					</div>
-					<div class="row uniform">
-						<div class="12u">
-							<input type="email" name="email" id="email" placeholder="Email" />
-						</div>
-					</div>
-					<div class="row uniform">
-						<div class="12u">
-							<input type="text" name="_subject" id="subject" placeholder="Subject" />
-						</div>
-					</div>
-					<div class="row uniform">
-						<div class="12u">
-							<textarea name="message" id="message" placeholder="Message" rows="6"></textarea>
-						</div>
-					</div>
-					<div style="display:none">
-						<input type="hidden" name="_subject" value="New submission!">
-						<input type="hidden" name="_next" value="http://www.nickolasgupton.me/thanks.html">
-						<input type="text" name="_gotcha">
-					</div>
-					<div class="row uniform">
-						<div class="12u">
-							<ul class="actions">
-								<li>
-									<input type="submit" class="special" value="Send Message" />
-								</li>
-							</ul>
-						</div>
-					</div>
-				</form>
+				<ul class="contact">
+					<li class="fa-envelope-o"><a href="mailto:contact@nickolasgupton.me" target="_blank">contact@nickolasgupton.me</a></li>
+					<li class="fa-github"><a href="https://github.com/CorruptComputer">GitHub</a></li>
+					<li class="fa-comment-o">Discord: CorruptComputer#9473</li>
+				</ul>
+				
 			</div>
 		</section>
 
