--- a/_includes/components/posts.html
+++ b/_includes/components/posts.html
@@ -4,7 +4,7 @@
 		{% for post in include.posts %}
 
 			<article>
-				<a href="{{ post.url }}" class="image"><img src="{{ post.image }}" alt="" /></a>
+				<a href="{{ post.url }}" class="image"><img src="{{ post.image }}" alt="{{ post.title }}" /></a>
 				<h3>{{ post.title }}</h3>
 				<p>{{ post.excerpt | remove: "<p>" | remove: "</p>" }}</p>
 				<ul class="actions">
