--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,17 @@
 		<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/ie8.css" /><![endif]-->
+
+
+		<!-- Google Stuff -->
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+		  (adsbygoogle = window.adsbygoogle || []).push({
+			google_ad_client: "ca-pub-4199830707169481",
+			enable_page_level_ads: true
+		  });
+		</script>
+
 	</head>
 	<body>
 
