Some more recent information

--- a/_includes/components/features.html
+++ b/_includes/components/features.html
@@ -13,7 +13,7 @@
 
 					{% if feature.url %}
 						<ul class="actions">
-							<li><a class="button" href="#">Read More</a></li>
+							<li><a class="button" href="{{ feature.url }}">Read More</a></li>
 						</ul>
 					{% endif %}
 
