--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,17 @@
 ---
-layout: page
+layout: default
 ---
 
-<header>
-	<h1>{{ page.title }}</h1>
-	<p>{{ page.date | date: "%B %-d, %Y" }}</p>
-</header>
+<div id="content">
+   <div class="bigBox">
+     <h2>{{ page.title }}</h2>
+	   <p>{{ page.date | date: "%B %-d, %Y" }}</p>
 
-{% if page.image %}
-	<span class="image fit">
-		<img src="{{ site.baseurl }}{{ page.image }}" alt="{{ page.title }}">
-	</span>
-{% endif %}
+      {% if page.image %}
+        <img src="{{ site.baseurl }}{{ page.image }}" alt="{{ page.title }}" class="blogImage">
+      {% endif %}
 
-{{ content }}
+      {{ content }}
+
+   </div>
+</div>
