--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,54 +1,353 @@
----
----
-@import 'libs/vars';
-@import 'libs/functions';
-@import 'libs/mixins';
-@import 'libs/skel';
-@import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,400italic,600italic|Roboto+Slab:400,700');
+--- 
+--- 
 
-	@include skel-breakpoints((
-		xlarge: '(max-width: 1680px)',
-		large: '(max-width: 1280px)',
-		medium: '(max-width: 980px)',
-		small: '(max-width: 736px)',
-		xsmall: '(max-width: 480px)',
-		xxsmall: '(max-width: 360px)',
-		xlarge-to-max: '(min-width: 1681px)',
-		small-to-xlarge: '(min-width: 481px) and (max-width: 1680px)'
-	));
+@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700");
+@import "font-awesome.min.css"; // http://fontawesome.io/
 
-	@include skel-layout((
-		reset: 'full',
-		boxModel: 'border',
-		grid: ( gutters: 1.5em )
-	));
+html{
+	min-height:100%;/* make sure it is at least as tall as the viewport */
+	position:relative;
+}
 
-// Base.
+body {
+	font-family: 'Poppins', sans-serif;
+	background-image: url(/images/bg.png);
+	background-position: top center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	box-sizing: border-box;
+	height: 100%;
+}
 
-	@import 'base/page';
-	@import 'base/typography';
+i {
+	padding: 5px;
+}
 
-// Component.
+p {
+	font-family: 'Poppins', sans-serif;
+	font-size: 1.1em;
+	font-weight: 300;
+	line-height: 1.7em;
+	color: #999;
+}
 
-	@import 'components/section';
-	@import 'components/form';
-	@import 'components/box';
-	@import 'components/icon';
-	@import 'components/image';
-	@import 'components/list';
-	@import 'components/table';
-	@import 'components/button';
-	@import 'components/mini-posts';
-	@import 'components/features';
-	@import 'components/posts';
+a,
+a:hover,
+a:focus {
+	color: inherit;
+	text-decoration: none;
+	transition: all 0.3s;
+}
 
-// Layout.
+.wrapper {
+	display: flex;
+	align-items: stretch;
+	perspective: 1500px;
+	position:absolute;
+	top:0;
+	bottom:0;
+	left:0;
+	right:0;
+	height: 100%;
+	overflow: auto; 
+}
 
-	@import 'layout/wrapper';
-	@import 'layout/main';
-	@import 'layout/sidebar';
-	@import 'layout/header';
-	@import 'layout/banner';
-	@import 'layout/footer';
-	@import 'layout/menu';
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+.group {
+	position: sticky;
+	top: 0;
+}
+
+#sidebar {
+	min-width: 300px;
+	max-width: 40%;
+	min-height: 100%;
+	background: transparent;
+	overflow: hidden;
+	box-shadow: 0px 0px 60px -30px rgba(0, 0, 0, 0.75);
+	position: relative;
+	border-radius: 0px;
+	border: 0px solid rgba(0, 0, 0, 0.1);
+	color: #fff;
+	z-index: 10;
+	transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
+	transform-origin: bottom left;
+
+	.sidebar-header {
+		padding: 20px;
+		background: #6d7fcc;
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		align-items: stretch;
+	}
+	
+	ul.components {
+		padding: 20px 0;
+		border-bottom: 1px solid #47748b;
+	}
+	
+	ul {
+		p {
+			color: #fff;
+			padding: 10px;
+		}
+		
+		li {
+			a {
+				padding: 10px;
+				font-size: 1.1em;
+				display: block;
+			}
+			
+			a:hover {
+				color: #7386D5;
+				background: #fff;
+			}
+		}
+		
+		ul {
+			list-style: none;
+			padding: 0px;
+			
+			a {
+				font-size: 0.9em;
+				padding-left: 10px;
+				list-style: none;
+			}
+		}
+	}
+}
+
+#sidebar.hidden {
+	margin-left: -250px;
+	transform: rotateY(100deg);
+}
+
+/* ---------------------------------------------------
+    Sidebar Buttons
+----------------------------------------------------- */
+
+#sidebarExpand {
+	outline: none;
+	background: transparent;
+	overflow: hidden;
+	position: absolute;
+	float: left;
+	box-shadow: 0px 0px 60px -30px rgba(0, 0, 0, 0.75);
+	border-radius: 5px;
+	border: 0px solid rgba(0, 0, 0, 0.1);
+	width: 40px;
+	height: 40px;
+	background: #f5f5f5;
+	margin: 10px;
+	
+	span {
+		width: 80%;
+		height: 2px;
+		margin: 0 auto;
+		display: block;
+		background: #555;
+		transition: all 0.8s cubic-bezier(0.810, -0.330, 0.345, 1.375);
+		transition-delay: 0.2s;
+		transform: none;
+		opacity: 1;
+		margin: 5px auto;
+	}
+}
+
+#sidebarCollapse {
+	outline: none;
+	background: transparent;
+	overflow: hidden;
+	position: relative;
+	float: right;
+	box-shadow: 0px 0px 60px -30px rgba(0, 0, 0, 0.75);
+	border-radius: 5px;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	width: 40px;
+	height: 40px;
+	
+	span {
+		width: 80%;
+		height: 2px;
+		margin: 0 auto;
+		display: block;
+		background: #555;
+		transition: all 0.8s cubic-bezier(0.810, -0.330, 0.345, 1.375);
+		transition-delay: 0.2s;
+	}
+	
+	span:first-of-type {
+		transform: rotate(45deg) translate(2px, 1px);
+	}
+	
+	span:last-of-type {
+		transform: rotate(-45deg);
+	}
+}
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+
+#content {
+	padding: 20px;
+	min-height: 100%;
+	width: 100%;
+	transition: all 0.3s;
+}
+
+.line {
+	width: 100%;
+	height: 1px;
+	border-bottom: 1px dashed #ddd;
+	margin: 40px 0;
+}
+
+/* ---------------------------------------------------
+    Content Boxes
+----------------------------------------------------- */
+
+.bigBox {
+	background: transparent;
+	overflow: hidden;
+	box-shadow: 0px 0px 60px -30px rgba(0, 0, 0, 0.75);
+	position: relative;
+	border-radius: 20px;
+	border: 0px solid rgba(0, 0, 0, 0.1);
+	padding: 20px;
+	margin: 10px;
+	
+	p {
+		color: #eee;
+		
+		a {
+			text-decoration: underline;
+		}
+	}
+}
+
+.row {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	align-items: stretch;
+}
+
+fieldset {
+	min-width: 20%;
+	max-width: 30%;
+	background: rgba(200, 200, 200, 0.7);
+	box-shadow: 0px 0px 60px -30px rgba(0, 0, 0, 0.75);
+	border-radius: 5px;
+	border: 1px solid black;
+	padding: 10px;
+	margin: 10px;
+	
+	legend {
+		padding: 0px 5px;
+		border-radius: 5px;
+		background: #eee;
+		border: 1px solid black;
+		font-size: 20px;
+	}
+	
+	p {
+		color: #222 !important;
+	}
+}
+
+/* ---------------------------------------------------
+   BLOG
+----------------------------------------------------- */
+
+.post {
+	min-width: 97%;
+}
+
+.blogBtn{
+	background: #6d7fcc;
+	border: none;
+	outline: none;
+	border-radius: 5px;
+	color: white;
+	padding: 8px 16px;
+	text-align: center;
+	font-size: 16px;
+	margin: 5px;
+	cursor: pointer;
+}
+
+.disabled {
+	background: #aaa;
+	cursor: default;
+}
+
+.pagination {
+	margin: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.blogImage{
+	float: left;
+	width: 40%;
+	height: auto;
+	margin: 10px;
+	padding: 10px;
+}
+
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+
+@media only screen and (max-width: 720px) {
+	#sidebar.hidden {
+		margin-left: -250px;
+		transform: rotateY(90deg);
+	}
+	
+	#sidebar {
+		margin-left: 0;
+		transform: none;
+		position: absolute;
+		float: left;
+		background: #6d7fcc;
+	}
+	
+	#sidebarExpand {
+		span {
+			transform: none;
+			opacity: 1;
+			margin: 5px auto;
+		}
+	}
+	
+	#sidebarCollapse {
+		span {
+			margin: 0 auto;
+		}
+		
+		span:first-of-type {
+			transform: rotate(45deg) translate(2px, 1px);
+		}
+		
+		span:last-of-type {
+			transform: rotate(-45deg);
+		}
+	}
+	
+	.contentBox {
+		min-width: 60%;
+		max-width: 85%;
+	}
+	
+	fieldset {
+		max-width: 100%;
+	}
+}
