Add work experience Refactor some CSS Made the monkey do a loop-de-loop

--- a/_includes/layout/sidebar-home.html
+++ b/_includes/layout/sidebar-home.html
@@ -1,6 +1,6 @@
 <nav>
     <div class="navSquare noHover">
-        <img src="{{ site.baseurl }}/images/monkey.png" />
+        <img id="monkey" src="{{ site.baseurl }}/images/monkey.png" />
     </div>
     <div class="navSquare selected">
         <a href="{{ site.baseurl }}/index.html">
