--- a/_layouts/default-blog.html
+++ b/_layouts/default-blog.html
@@ -16,4 +16,5 @@
     </body>
 
     <script src="{{ site.baseurl }}/assets/js/main.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </html>
