--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -139,6 +139,25 @@ code {
    padding-right: 5px;
 }
 
+.skills {
+	margin-top: 0;
+	margin-bottom: 0;
+	padding-left: 10px;
+	list-style-type: none;
+	min-width: 150px;
+
+	li{
+		margin-top: 5px;
+		width: 75%;
+		float:left;
+	}
+
+	li:nth-child(even){
+		width: 25%;
+		float: right;
+	}
+}
+
 /*********
 ** Blog **
 *********/
