--- a/_layouts/default-home.html
+++ b/_layouts/default-home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        {% include favicon.html %}
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Nickolas Gupton</title>
         <!-- My CSS -->
