Add DNS to the sidebar

--- a/_includes/layout/sidebar-blog.html
+++ b/_includes/layout/sidebar-blog.html
@@ -15,6 +15,12 @@
         </a>
     </div>
     <div class="navSquare">
+        <a href="https://dns.gupton.xyz/">
+            <img src="{{ site.baseurl }}/images/dns.png" alt="DNS" />
+            <div>DNS</div>
+        </a>
+    </div>
+    <div class="navSquare">
         <a href="{{ site.baseurl }}/contact.html">
             <img src="{{ site.baseurl }}/images/contact.png" alt="Contact" />
             <div>Contact</div>
