--- a/_includes/layout/sidebar-contact.html
+++ b/_includes/layout/sidebar-contact.html
@@ -14,6 +14,12 @@
             <div>Blog</div>
         </a>
     </div>
+    <div class="navSquare">
+        <a href="https://dns.gupton.xyz/">
+            <img src="{{ site.baseurl }}/images/dns.png" alt="DNS" />
+            <div>DNS</div>
+        </a>
+    </div>
     <div class="navSquare selected">
         <a href="{{ site.baseurl }}/contact.html">
             <img src="{{ site.baseurl }}/images/contact.png" alt="Contact" />
