--- a/_layouts/default-home.html
+++ b/_layouts/default-home.html
@@ -3,12 +3,14 @@
     <head>
         {% include favicon.html %}
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name='description' content="Nickolas Gupton's home on the Internet.">
         <title>Nickolas Gupton</title>
         <!-- My CSS -->
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
       </head>
 
     <body>
+        <h1 style="display:none;">Nickolas Gupton's Home</h1>
         <div class="container">
             {{ content }}
         </div>
