--- a/_layouts/default-blog.html
+++ b/_layouts/default-blog.html
@@ -7,6 +7,14 @@
         <title>Nickolas Gupton</title>
         <!-- My CSS -->
         <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+        <!-- Clarity code for https://nickolas.gupton.xyz/ -->
+        <script>
+            (function(c,l,a,r,i,t,y){
+                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+            })(window, document, "clarity", "script", "4xn0ktny6k");
+        </script>
       </head>
 
     <body>
