Clean up some of the header code to use includes

--- a/_layouts/default-blog.html
+++ b/_layouts/default-blog.html
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        {% include favicon.html %}
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name='description' content='Blog for Nickolas Gupton. Discusses Programming, Linux, and other Tech topics.'>
-        <title>Nickolas Gupton</title>
-        <!-- My CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
-        <!-- Clarity code for https://nickolas.gupton.xyz/ -->
-        <script>
-            (function(c,l,a,r,i,t,y){
-                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-            })(window, document, "clarity", "script", "4xn0ktny6k");
-        </script>
+{% include header.html %}
       </head>
 
     <body>
