Clean up some duplicate code

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,14 +2,14 @@
     <div class="navSquare noHover">
         <img id="monkey" src="{{ site.baseurl }}/images/monkey.png" alt="Monkey" />
     </div>
-    <div class="navSquare">
-        <a href="{{ site.baseurl }}/index.html">
+    <div class="navSquare" id="homeButton">
+        <a href="{{ site.baseurl }}/">
             <img src="{{ site.baseurl }}/images/home.png" alt="Home" />
             <div>Home</div>
         </a>
     </div>
-    <div class="navSquare selected">
-        <a href="{{ site.baseurl }}/blog/index.html">
+    <div class="navSquare" id="blogButton">
+        <a href="{{ site.baseurl }}/blog/">
             <img src="{{ site.baseurl }}/images/blog.png" alt="Blog" />
             <div>Blog</div>
         </a>
