--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -11,10 +11,9 @@
             {{ content }}
         </div>
 
-        {% include layout/sidebar-blog.html %}
+        {% include navbar.html %}
 
     </body>
 
-    <script src="{{ site.baseurl }}/assets/js/main.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-</html>
+{% include footer.html %}
+    </html>
