Add 404 page and clean up some unnecessary files

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,31 @@
-{% include favicon.html %}
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nickolas Gupton</title>
-        <!-- My CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
-{% include clarity.html %}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Nickolas Gupton</title>
+<!-- My CSS -->
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+
+<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/favicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="194x194" href="{{ site.baseurl }}/favicons/favicon-194x194.png">
+<link rel="icon" type="image/png" sizes="192x192" href="{{ site.baseurl }}/favicons/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicons/favicon-16x16.png">
+<link rel="manifest" href="{{ site.baseurl }}/favicons/site.webmanifest">
+<link rel="mask-icon" href="{{ site.baseurl }}/favicons/safari-pinned-tab.svg" color="#454d6a">
+<link rel="shortcut icon" href="{{ site.baseurl }}/favicons/favicon.ico">
+<meta name="apple-mobile-web-app-title" content="Nickolas Gupton">
+<meta name="application-name" content="Nickolas Gupton">
+<meta name="msapplication-TileColor" content="#454d6a">
+<meta name="msapplication-TileImage" content="{{ site.baseurl }}/favicons/mstile-144x144.png">
+<meta name="msapplication-config" content="{{ site.baseurl }}/favicons/browserconfig.xml">
+<meta name="theme-color" content="#454d6a">
+
+<script src="{{ site.baseurl }}/assets/js/main.js" defer></script>
+<script src="https://kit.fontawesome.com/be0c523f85.js" crossorigin="anonymous" defer></script>
+
+<!-- Clarity code for https://nickolas.gupton.xyz/ -->
+<script>
+        (function(c,l,a,r,i,t,y){
+                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "4xpup7sywk");
+</script>
