--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name='description' content="Nickolas Gupton's home on the Internet.">
-{% include header.html %}
-      </head>
+        <meta name='description' content="My home on the Internet. Discussing programming, Linux, and other tech topics.">
+        {% include header.html %}
+    </head>
 
     <body>
-        <h1 style="display:none;">Nickolas Gupton's Home</h1>
+        <h1 style="display:none;">Nickolas Gupton's Website and Blog</h1>
         <div class="container">
             {{ content }}
         </div>
         
         {% include navbar.html %}
-
     </body>
-
-{% include footer.html %}
 </html>
