--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,24 +1,24 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Nickolas Gupton</title>
 <!-- My CSS -->
-<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css">
+<link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 
-<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/favicons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="194x194" href="{{ site.baseurl }}/favicons/favicon-194x194.png">
-<link rel="icon" type="image/png" sizes="192x192" href="{{ site.baseurl }}/favicons/android-chrome-192x192.png">
-<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/favicons/favicon-16x16.png">
-<link rel="manifest" href="{{ site.baseurl }}/favicons/site.webmanifest">
-<link rel="mask-icon" href="{{ site.baseurl }}/favicons/safari-pinned-tab.svg" color="#454d6a">
-<link rel="shortcut icon" href="{{ site.baseurl }}/favicons/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}/favicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ site.url }}/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="194x194" href="{{ site.url }}/favicons/favicon-194x194.png">
+<link rel="icon" type="image/png" sizes="192x192" href="{{ site.url }}/favicons/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ site.url }}/favicons/favicon-16x16.png">
+<link rel="manifest" href="{{ site.url }}/favicons/site.webmanifest">
+<link rel="mask-icon" href="{{ site.url }}/favicons/safari-pinned-tab.svg" color="#454d6a">
+<link rel="shortcut icon" href="{{ site.url }}/favicons/favicon.ico">
 <meta name="apple-mobile-web-app-title" content="Nickolas Gupton">
 <meta name="application-name" content="Nickolas Gupton">
 <meta name="msapplication-TileColor" content="#454d6a">
-<meta name="msapplication-TileImage" content="{{ site.baseurl }}/favicons/mstile-144x144.png">
-<meta name="msapplication-config" content="{{ site.baseurl }}/favicons/browserconfig.xml">
+<meta name="msapplication-TileImage" content="{{ site.url }}/favicons/mstile-144x144.png">
+<meta name="msapplication-config" content="{{ site.url }}/favicons/browserconfig.xml">
 <meta name="theme-color" content="#454d6a">
 
-<script src="{{ site.baseurl }}/assets/js/main.js" defer></script>
+<script src="{{ site.url }}/assets/js/main.js" defer></script>
 <script src="https://kit.fontawesome.com/be0c523f85.js" crossorigin="anonymous" defer></script>
 
 <!-- Clarity code for https://nickolas.gupton.xyz/ -->
