--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,16 +1,16 @@
 <nav>
     <div class="navSquare noHover">
-        <img id="monkey" src="{{ site.baseurl }}/images/monkey.png" alt="Monkey" />
+        <img id="monkey" src="{{ site.url }}/images/monkey.png" alt="Monkey" />
     </div>
     <div class="navSquare" id="homeButton">
-        <a href="{{ site.baseurl }}/">
-            <img src="{{ site.baseurl }}/images/home.png" alt="Home" />
+        <a href="{{ site.url }}/">
+            <img src="{{ site.url }}/images/home.png" alt="Home" />
             <div>Home</div>
         </a>
     </div>
     <div class="navSquare" id="blogButton">
-        <a href="{{ site.baseurl }}/blog/">
-            <img src="{{ site.baseurl }}/images/blog.png" alt="Blog" />
+        <a href="{{ site.url }}/blog/">
+            <img src="{{ site.url }}/images/blog.png" alt="Blog" />
             <div>Blog</div>
         </a>
     </div>
