--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -151,7 +151,7 @@ p, h4 {
 }
 
 code {
-	font-family: Consolas;
+	font-family: Consolas, monospace;
 	background-color: #404040;
 	padding: 1px;
 	padding-left: 5px;
