Add comments section to blog posts
Currently testing to see if this works well

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,16 @@ layout: default
          <p>{{ page.date | date: "%B %-d, %Y" }}</p>
 
          {{ content }}
+
+         <hr />
+         <script src="https://utteranc.es/client.js"
+                 repo="CorruptComputer/CorruptComputer.GitHub.io"
+                 issue-term="url"
+                 label="Blog Comments"
+                 theme="github-dark"
+                 crossorigin="anonymous"
+                 async>
+         </script>
       </div>
    </div>
 </div>
