Add Cloudflare web beacon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,5 +12,7 @@
         </div>
         
         {% include navbar.html %}
+
+        <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "babad771f26544469aedb30627d230b7"}'></script>
     </body>
 </html>
