Change repo URL to new location and add redirect

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
 
          <hr />
          <script src="https://utteranc.es/client.js"
-                 repo="CorruptComputer/CorruptComputer.GitHub.io"
+                 repo="CorruptComputer/home"
                  issue-term="url"
                  label="Blog Comments"
                  theme="github-dark"
