Relative paths for site resources

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,16 +1,16 @@
 <nav>
     <div class="navSquare noHover">
-        <img id="monkey" src="{{ site.url }}/images/monkey.png" alt="Monkey" />
+        <img id="monkey" src="/images/monkey.png" alt="Monkey" />
     </div>
     <div class="navSquare" id="homeButton">
-        <a href="{{ site.url }}/">
-            <img src="{{ site.url }}/images/home.png" alt="Home" />
+        <a href="/">
+            <img src="/images/home.png" alt="Home" />
             <div>Home</div>
         </a>
     </div>
     <div class="navSquare" id="blogButton">
-        <a href="{{ site.url }}/blog/">
-            <img src="{{ site.url }}/images/blog.png" alt="Blog" />
+        <a href="/blog/">
+            <img src="/images/blog.png" alt="Blog" />
             <div>Blog</div>
         </a>
     </div>
