--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
      <h2>{{ page.title }}</h2><hr />
 
       {% if page.image %}
-         <img src="{{ site.baseurl }}{{ page.image }}" alt="{{ page.title }}" class="blogImage">
+         <img src="{{ page.image }}" alt="{{ page.title }}" class="blogImage">
       {% endif %}
       
       <div>
