--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,28 +1,60 @@
----
-layout: default
----
-<div class="row">
-   <div class="box">
-     <h2>{{ page.title }}</h2><hr />
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta name='description' content="{{ page.excerpt }}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>{{ page.title }} | Nickolas Gupton</title>
+    
+        <link rel="stylesheet" href="/assets/css/main.css">
+        <script src="/assets/js/main.js" defer></script>
+    
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="194x194" href="/favicons/favicon-194x194.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="/favicons/android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+        <link rel="manifest" href="/favicons/site.webmanifest">
+        <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#454d6a">
+        <link rel="shortcut icon" href="/favicons/favicon.ico">
+        <meta name="apple-mobile-web-app-title" content="Nickolas Gupton">
+        <meta name="application-name" content="Nickolas Gupton">
+        <meta name="msapplication-TileColor" content="#454d6a">
+        <meta name="msapplication-TileImage" content="/favicons/mstile-144x144.png">
+        <meta name="msapplication-config" content="/favicons/browserconfig.xml">
+        <meta name="theme-color" content="#454d6a">
+    </head>
 
-      {% if page.image %}
-         <img src="{{ page.image }}" alt="{{ page.title }}" class="blogImage">
-      {% endif %}
-      
-      <div>
-         <p>{{ page.date | date: "%B %-d, %Y" }}</p>
+    <body>
+        <h1 style="display:none;">{{ page.title }}</h1>
+        <div class="container">
+         <div class="row">
+            <div class="box">
+              <h2>{{ page.title }}</h2><hr />
+         
+               {% if page.image %}
+                  <img src="{{ page.image }}" alt="{{ page.title }}" class="blogImage">
+               {% endif %}
+               
+               <div>
+                  <p>{{ page.date | date: "%B %-d, %Y" }}</p>
+         
+                  {{ content }}
+         
+                  <hr />
+                  <script src="https://utteranc.es/client.js"
+                          repo="CorruptComputer/home"
+                          issue-term="url"
+                          label="Blog Comments"
+                          theme="github-dark"
+                          crossorigin="anonymous"
+                          async>
+                  </script>
+               </div>
+            </div>
+         </div>
+        </div>
+        
+        {% include navbar.html %}
 
-         {{ content }}
-
-         <hr />
-         <script src="https://utteranc.es/client.js"
-                 repo="CorruptComputer/home"
-                 issue-term="url"
-                 label="Blog Comments"
-                 theme="github-dark"
-                 crossorigin="anonymous"
-                 async>
-         </script>
-      </div>
-   </div>
-</div>
+    </body>
+</html>
