Specify canonical URLs for SEO

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name='description' content="My home on the Internet. Discussing programming, Linux, and other tech topics.">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <meta name='description' content="My home on the Internet. Discussing programming, Linux, and other tech topics.">
+        
+        <link rel="canonical" href="{{site.url}}{{ page.url }}" />
         <title>Nickolas Gupton</title>
     
         <link rel="stylesheet" href="/assets/css/main.css">
