--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name='description' content="{{ page.excerpt }}">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <meta name='description' content="{{ page.excerpt }}">
+
+        <link rel="canonical" href="{{site.url}}{{ page.url }}" />
         <title>{{ page.title }} | Nickolas Gupton</title>
-    
+
         <link rel="stylesheet" href="/assets/css/main.css">
         <script src="/assets/js/main.js" defer></script>
-    
+
         <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="194x194" href="/favicons/favicon-194x194.png">
@@ -27,31 +31,31 @@
     <body>
         <h1 style="display:none;">{{ page.title }}</h1>
         <div class="container">
-         <div class="row">
-            <div class="box">
-              <h2>{{ page.title }}</h2><hr />
-         
-               {% if page.image %}
-                  <img src="{{ page.image }}" alt="{{ page.title }}" class="blogImage">
-               {% endif %}
-               
-               <div>
-                  <p>{{ page.date | date: "%B %-d, %Y" }}</p>
-         
-                  {{ content }}
-         
-                  <hr />
-                  <script src="https://utteranc.es/client.js"
-                          repo="CorruptComputer/home"
-                          issue-term="url"
-                          label="Blog Comments"
-                          theme="github-dark"
-                          crossorigin="anonymous"
-                          async>
-                  </script>
-               </div>
+            <div class="row">
+                <div class="box">
+                    <h2>{{ page.title }}</h2><hr />
+                
+                    {% if page.image %}
+                        <img src="{{ page.image }}" alt="{{ page.title }}" class="blogImage">
+                    {% endif %}
+                    
+                    <div>
+                        <p>{{ page.date | date: "%B %-d, %Y" }}</p>
+                
+                        {{ content }}
+                
+                        <hr />
+                        <script src="https://utteranc.es/client.js"
+                                repo="CorruptComputer/home"
+                                issue-term="url"
+                                label="Blog Comments"
+                                theme="github-dark"
+                                crossorigin="anonymous"
+                                async>
+                        </script>
+                    </div>
+                </div>
             </div>
-         </div>
         </div>
         
         {% include navbar.html %}
