Preload blog posts on current page

--- a/Home/App.razor
+++ b/Home/App.razor
@@ -18,7 +18,7 @@
                     </div>
                     <br />
                     <div style="display: flex; justify-content: space-around;">
-                        <Button OnClick="() => NavigateHome()">Return home</Button>
+                        <LinkButton Href="/">Return home</LinkButton>
                     </div>
                 </Box>
             </Row>
