--- a/Home/Components/Button.razor
+++ b/Home/Components/Button.razor
@@ -1,3 +1,3 @@
-﻿<a @onclick="OnClick" class="button @(Disabled ? "disabled" : string.Empty)">
+﻿<button @onmousedown="OnMouseDownAsync" class="button @(Disabled ? "disabled" : string.Empty)">
     @ChildContent
-</a>
+</button>
