Update blog post list page title

--- a/Home/Pages/Blog/Index.razor
+++ b/Home/Pages/Blog/Index.razor
@@ -1,7 +1,7 @@
 @page "/blog"
 @layout MainLayout
 
-<PageTitle>Nickolas Gupton</PageTitle>
+<PageTitle>Blog Posts - Page @(CurrentPage + 1)</PageTitle>
 
 @if (CurrentPage == 0) 
 {
