Migrate Nim to Blazor

--- a/Home/Components/Navbar.razor
+++ b/Home/Components/Navbar.razor
@@ -15,10 +15,10 @@
             <div>Blog</div>
         </a>
     </div>
-    <!--div class="navSquare @(SelectedNavButton == NavButton.Games ? "selected" : string.Empty)" id="gamesButton">
+    <div class="navSquare @(SelectedNavButton == NavButton.Games ? "selected" : string.Empty)" id="gamesButton">
         <a @onclick="NavigateToGames">
-            <img src="/images/blog.webp" alt="Games" />
+            <img src="/images/games/games.png" alt="Games" />
             <div>Games</div>
         </a>
-    </div-->
+    </div>
 </nav>
