--- a/Home/Components/GamesNavbar.razor.css
+++ b/Home/Components/GamesNavbar.razor.css
@@ -54,7 +54,7 @@ a img {
 	from {
 		transform:rotate(0deg);
 	}
-	
+
 	to {
 		transform:rotate(360deg);
 	}
@@ -89,9 +89,11 @@ a img {
 	nav {
 		flex-direction: row;
 		height: 70px;
+		margin-bottom: 70px;
+		margin-left: -70px;
 		width: 100%;
-		position: sticky;
-		float: bottom;
+		position: fixed;
+		float: inline-end;
 	}
 
 	.navSquare{
