--- a/Home/Components/Navbar.razor.css
+++ b/Home/Components/Navbar.razor.css
@@ -53,7 +53,7 @@ a img {
 	from {
 		transform:rotate(0deg);
 	}
-	
+
 	to {
 		transform:rotate(360deg);
 	}
@@ -88,8 +88,8 @@ a img {
 		flex-direction: row;
 		height: 70px;
 		width: 100%;
-		position: sticky;
-		float: bottom;
+		position: fixed;
+		float: inline-end;
 	}
 
 	.navSquare{
