--- a/Home/Layout/MainLayout.razor.css
+++ b/Home/Layout/MainLayout.razor.css
@@ -1,26 +1,35 @@
 ﻿.container {
-	display: flex;
-	flex-direction: column;
-	float: right;
-	padding: 4%;
-	width: 85%;
-	left: 100px;
+    display: flex;
+    flex-direction: column;
+    float: right;
+    padding: 4%;
+    width: 85%;
 }
 
-@media only screen and (max-width: 1024px) {
-	.container {
-		left: 70px;
-	}
+.gamesContainer {
+    display: flex;
+    flex-direction: column;
+    float: right;
+    padding: 4%;
+    width: 80%;
 }
 
 @media only screen and (max-width: 720px) {
-	.container {
-		margin-left: 10px;
-		margin-right: 10px;
-		margin-bottom: 10px;
-		padding-bottom: 10px;
-		width: 90%;
-		left: 0px;
-		position: relative;
-	}
+    .container {
+        margin-left: 10px;
+        margin-right: 10px;
+        padding-bottom: 80px;
+        width: 90%;
+        left: 0px;
+        position: relative;
+    }
+
+    .gamesContainer {
+        margin-left: 10px;
+        margin-right: 10px;
+        padding-bottom: 150px;
+        width: 90%;
+        left: 0px;
+        position: relative;
+    }
 }
