Scale image to a reasonable size

--- a/Home/Pages/Games/Nim/Index.razor
+++ b/Home/Pages/Games/Nim/Index.razor
@@ -1,6 +1,8 @@
 ﻿@page "/games/nim"
 @layout MainLayout
 
+<PageTitle>Games - Nim</PageTitle>
+
 <Box Title="Nim">
     <div id="gameBoard">
         @for (int r = 0; r < State.StartingBoard.Count; r++)
